--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi" target="_blank">Facebook</a> or <a href="https://twitter.com/danhee1012" target="_blank">Twitter</a>.</p>
 					<br>
 				</div>
-				<div class="container-fluid dark" id="about">
+				<!--<div class="container-fluid dark" id="about">
 					<div class="container">
 						<h3 class="text-center">Education</h3>
 						<h4>Springfield Township High School
@@ -162,9 +162,9 @@
 						</ul>
 					</div>
 					<br>
-				</div>
+				</div>-->
 				<div class="container" id="projects">
-					<h2 class="text-center">Skills<br></h2>
+					<!--<h2 class="text-center">Skills<br></h2>
 					<div class="row">
 						<div class="col-sm-4 divider">
 							<h4 class="text-center">Languages</h4>
@@ -201,9 +201,9 @@
 								<li>Inno Setup 5</li>
 							</ul>
 						</div>
-					</div>
+					</div>-->
 					<br>
-					<h2 class="text-center">What I have done.</h2>
+					<h2 class="text-center">Projects</h2>
 					<h5 class="text-center">Click the images to view descriptions.</h5><br>
 					<div class="row">
 						<div class="col-md-6 col-sm-12">
@@ -303,7 +303,7 @@
 						</div>
 					</div>
 					<br><br>
-					<h2 class="text-center">Honors / Awards</h2>
+					<!--<h2 class="text-center">Honors / Awards</h2>
 					<br>
 					<ul>
 						<li>2011 Temple University Future of Computing IST Center Award &amp; Intern U Best High School Project Silver Award</li>
@@ -314,7 +314,7 @@
 						<li>2014 Spring Hackillinois Participation</li>
 						<li>2014 Fall HackMizzou Participation</li>
 					</ul>
-				</div><br><br><br>
+				</div><br><br><br>-->
 				<div class="container-fluid dark" id="contacts">
 					<div class="container">
 						<h3 class="text-center">Contacts<br><br>
