Clean up website 2

--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
 						<li>2010 KSEA National Math Competition 9th Grade First Place in Philadelphia Chapter</li>
 						<li>2014 Spring Hackillinois Participation</li>
 						<li>2014 Fall HackMizzou Participation</li>
-					</ul>
-				</div><br><br><br>-->
+					</ul>-->
+				</div>
 				<div class="container-fluid dark" id="contacts">
 					<div class="container">
 						<h3 class="text-center">Contacts<br><br>
