--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	
 	html {
 		height:100%;
-		background: #ffffff url(https://images.unsplash.com/photo-1501914334045-d73f21057207?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2700&q=80); no-repeat center bottom fixed;
+		background: #ffffff url(https://images.unsplash.com/photo-1501914334045-d73f21057207?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2700&q=80) no-repeat center bottom fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
@@ -70,10 +70,6 @@
 
 	#cspio-page {
 		background-color: rgba(0,0,0,0);
-	}
-	
-	#cspio-logo {
-
 	}
 
 	.flexbox #cspio-page {
@@ -88,7 +84,6 @@
 	.cspio body, .cspio body p {
         font-family: Helvetica, Arial, sans-serif;
 		font-weight: 400;
-		font-style: ;
         font-size: 20px;
         line-height: 1.50em;
         color:#ffffff;
@@ -97,25 +92,21 @@
 	::-webkit-input-placeholder {
 		font-family:Helvetica, Arial, sans-serif;
 		font-weight: 400;
-		font-style: ;
 	}
 
 	::-moz-placeholder {
 		font-family:Helvetica, Arial, sans-serif;
 		font-weight: 400;
-		font-style: ;
 	} 
 
 	:-ms-input-placeholder {
 		font-family:Helvetica, Arial, sans-serif;
 		font-weight: 400;
-		font-style: ;
 	} 
 
 	:-moz-placeholder {
 		font-family:Helvetica, Arial, sans-serif;
 		font-weight: 400;
-		font-style: ;
 	}
 
     .cspio h1, .cspio h2, .cspio h3, .cspio h4, .cspio h5, .cspio h6 {
@@ -126,8 +117,7 @@
 	#cspio-headline {
 		font-family: 'Pacifico';
 		font-weight: 400;
-		font-style: ;
-				font-size: 48px;
+		font-size: 48px;
 		color:#ffffff;
 		line-height: 1.00em;
 	}
@@ -135,7 +125,6 @@
 	.cspio button {
         font-family: Helvetica, Arial, sans-serif;
 		font-weight: 400;
-		font-style: ;
     }
 	
     .cspio a, .cspio a:visited, .cspio a:hover, .cspio a:active {
@@ -215,7 +204,7 @@
 	}
 
 	.cspio input[type='text']:focus {
-		webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(217,217,217,0.6);
+		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(217,217,217,0.6);
 		-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(217,217,217,0.6);
 		box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(217,217,217,0.6);
 	}
