--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 	<meta property="og:description" content="" />
 	
 	<!-- Font Awesome CSS -->
-<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 	<!-- Bootstrap and default Style -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
@@ -279,6 +278,8 @@
 	<!-- Modernizr -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 	
+	<script src="https://kit.fontawesome.com/ab71e8f859.js" crossorigin="anonymous"></script>
+
 	<!-- Google Analytics Code Goes Here-->
 </head>
 <body>
@@ -292,10 +293,10 @@
 			<div id="cspio-description">Get ready! Something really cool is coming!</div>			    				
 						    						    			    								    			    			    				
 			<div id="cspio-socialprofiles">
-				<a href="https://www.linkedin.com/in/christopherdanheechoi/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
-				<a href="https://github.com/danhee1012" target="_blank"><i class="fab fa-github-alt fa-2x"></i></a>
-				<a href="./christopher_choi_resume.pdf" target="_blank"><i class="far fa-file-user fa-2x"></i></a>
-				<a href="mailto:christopher.danhee.choi@gmail.com" target="_blank"><i class="far fa-envelope fa-2x"></i></a>			
+				<a href="https://www.linkedin.com/in/christopherdanheechoi/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+				<a href="https://github.com/danhee1012" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
+				<a href="./christopher_choi_resume.pdf" target="_blank"><i class="fa-solid fa-file-user"></i></a>
+				<a href="mailto:christopher.danhee.choi@gmail.com" target="_blank"><i class="fa-regular fa-mailbox"></i></a>			
 			</div>   									    			    			    							
 		</div>
 	</div>
