--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Christopher Choi" />
 	<meta property="og:description" content="" />
-	
-	<!-- Font Awesome CSS -->
 
 	<!-- Bootstrap and default Style -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
@@ -293,10 +291,10 @@
 			<div id="cspio-description">Get ready! Something really cool is coming!</div>			    				
 						    						    			    								    			    			    				
 			<div id="cspio-socialprofiles">
-				<a href="https://www.linkedin.com/in/christopherdanheechoi/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-				<a href="https://github.com/danhee1012" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
-				<a href="./christopher_choi_resume.pdf" target="_blank"><i class="fa-solid fa-file-user"></i></a>
-				<a href="mailto:christopher.danhee.choi@gmail.com" target="_blank"><i class="fa-regular fa-mailbox"></i></a>			
+				<a href="https://www.linkedin.com/in/christopherdanheechoi/" target="_blank"><i class="fa-brands fa-linkedin-in fa-2x"></i></a>
+				<a href="https://github.com/danhee1012" target="_blank"><i class="fa-brands fa-github-alt fa-2x"></i></a>
+				<a href="./christopher_choi_resume.pdf" target="_blank"><i class="fa-solid fa-file-pdf fa-2x"></i></a>
+				<a href="mailto:christopher.danhee.choi@gmail.com" target="_blank"><i class="fa-regular fa-envelope fa-2x"></i></a>			
 			</div>   									    			    			    							
 		</div>
 	</div>
