--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 			<div id="cspio-socialprofiles">
 				<a href="https://www.linkedin.com/in/christopherdanheechoi/" target="_blank"><i class="fa-brands fa-linkedin-in fa-2x"></i></a>
 				<a href="https://github.com/danhee1012" target="_blank"><i class="fa-brands fa-github-alt fa-2x"></i></a>
-				<a href="./christopher_choi_resume.pdf" target="_blank"><i class="fa-solid fa-file-pdf fa-2x"></i></a>
+				<a href="./christopher_choi_resume.pdf" target="_blank"><i class="fa-regular fa-file-pdf fa-2x"></i></a>
 				<a href="mailto:christopher.danhee.choi@gmail.com" target="_blank"><i class="fa-regular fa-envelope fa-2x"></i></a>			
 			</div>   									    			    			    							
 		</div>
